[project]
name = "nelson-siegel-for-commodities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backtrader>=1.9.78.123",
    "dash>=3.3.0",
    "datetime>=6.0",
    "gymnasium>=1.2.3",
    "ipympl>=0.9.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "stable-baselines3[extra]>=2.7.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.52.2",
    "streamlit-autorefresh>=1.0.1",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
